Fix some layout bug

--- a/src/styles/layout/_account_layout.sass
+++ b/src/styles/layout/_account_layout.sass
@@ -14,9 +14,10 @@
     display: grid
     grid-template-columns: repeat(2, 1fr)
 
-    .form
-      display: grid
-      grid-row-gap: $gutter * 3
+    .right-column
+      .form
+        display: grid
+        grid-row-gap: $gutter * 3
 
-      .actions
-        justify-self: end
+        .actions
+          justify-self: end
